examples/bad/main-not-int.cnla
Str main() {

    return "A string!";
}